--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <div>Score: <span id="score"></span> of 4</div>
-        <div id="timer">Timer: </div>
+        <div>Timer: <span id="timer"></span></div>
     </div>
     <div class="container main">
     <main id="start">
