added try again button on last screen

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <label for="enterInitials">Initials: </label>
             <input type="text" id="enter-initials" name="initials">
             <button id="submit">submit</button>
+            <button id="try-again">submit and try again</button>
         </form>
 
     </section>
